# TestDeck

./: .eslintrc.cjs  .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  E-devlet_sorular.json  KURULUM_DUZELDI.md  LICENSE  Mantik_Devreleri_sorular.json  README.md  README_TR.md  STATISTICS_FIX_COMPLETED.md  WebFinal_sorular.json  add-questions.html  backup-script.js  check_localStorage.js  create_icon.py  create_icon.sh  create_minimal_icon.sh  create_temp_icon.sh  create_test_data.js  debug_data.html  debug_statistics.sh  debug_system.sh  fix_setup.sh  fix_white_screen.sh  gorsel-cikmis2-sorular.json  index.html  index.minimal.html  ornek-ayri-kolon.csv  ornek-birlesik-format.csv  ornek-karmisik-format.json  package-lock.json  package.json  recovery.html  sample_questions.json  simple_test.html  start_simple.sh  tailwind.config.js  (+3 more)
.github/: PULL_REQUEST_TEMPLATE.md
assets/: CardManager-c7ddd617.js  CreateCard-da0390e6.js  Dashboard-b9c61156.js  Layout-9e4125c6.js  Settings-a5bf7e02.js  Skeleton-67b72c6d.js  Statistics-6a81d801.js  Study-f2994934.js  alert-circle-c446cba2.js  arrow-left-92a3ed61.js  bar-chart-3-79f0edcb.js  book-open-5dce8f6a.js  brain-f7ad5ecc.js  calendar-810dc58e.js  check-circle-1e39d727.js  clock-e6037e52.js  createLucideIcon-6899df1c.js  index-5afd821c.js  index-dc4438df.css  play-d4f686f2.js  plus-6b55a125.js  rotate-ccw-8baff0ab.js  save-89a13c28.js  search-748789b4.js  seedEnglish-6dcf939f.js  sqliteDatabase-f219fdfc.js  sun-9246b9cc.js  (+5 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.json.conf
src-tauri/src/: main.rs
(+43 files in other folders)
